release 1.13
- Fixed issue 1057
  http://java.net/jira/browse/JERSEY-1057
  SAXParserContextProvider fail inconsistenly for missing XML parser features
- Fixed issue 1199
  http://java.net/jira/browse/JERSEY-1199
  Incorrect JSON serialization of xsi:type when preceding object ends with an array property
- Improved handling of external XML entities
- Fixed issue 1198
  http://java.net/jira/browse/JERSEY-1198
  UriTemplates containing characters that had special meaning (for regex expressions) did not work correctly.
- Fixed issue 1168
  http://java.net/jira/browse/JERSEY-1168
  XML Trees don't serialize children arrays correctly when the sub element is the same
  as the root element after the first level with Natural Json formatting
- Fixed issue 1132
  http://java.net/jira/browse/JERSEY-1132
  Add param to @Produces to indicate desire to produce valid JSON syntax
- Fixed issue 1161
  http://java.net/jira/browse/JERSEY-1161
  Added log message when GET method is going to be replaced with POST
  (HttpUrlConnection implementation "detail").
- Fixed issue 1130
  http://java.net/jira/browse/JERSEY-1130
  BeanGenerator.generatedClassCounter is now static (there were issues with
  multiple instances in the same thread/jvm).
- Fixed issue 1127
  http://java.net/jira/browse/JERSEY-1127
  Receiving responses using the client API failed occassionally when using chunked encoding.
- Fixed issue 1114
  http://java.net/jira/browse/JERSEY-1114
  UriTemplate was not concatenating URI with path correctly.
- Fixed issue 1118
  http://java.net/jira/browse/JERSEY-1118
  The NPE occurs when a java type of consumes is a primitive type, and not found entity provider
- Fixed issue 1042
  http://java.net/jira/browse/JERSEY-1042
  JsonXmlStreamReader is not working correctly with MOXy
- Fixed issue 770
  http://java.net/jira/browse/JERSEY-770
  JsonXmlStreamWriter writeCData "not supported yet"
- Fixed issue 1131
  http://java.net/jira/browse/JERSEY-1131